# pyAnalysis-backend

./: .gitignore  Dockerfile  LICENSE.md  README.md  caching.py  code_errors.py  config.py  conftest.py  docker-compose.yml  dockerfile  filemanager.py  logger.py  main.py  models.py  pyproject.toml  reports.py  upload_file.py  utils.py  validators.py
.deploy/: Dockerfile  docker-compose.yml
api/: reports.py  upload_file.py
data/: abc_result.xlsx  data_input_empty_rows.csv  only_header.xlsx
data/temp/: abc_test.xlsx
models/: models.py
services/: reports.py
tests/: test_cache.py  test_fastapi.py  test_filemanager.py
tests/data/: abc_test.csv  empty_exel.xlsx  only_header_csv.csv
utils/: filemanager.py
