[tool.poetry]
name = "pyanalysis-backend"
version = "0.1.0"
description = ""
authors = ["MurVladimirOS <ekliiehxmeh@gmail.com>"]
readme = "README.md"
packages = [{include = "pyanalysis_backend"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
