[tool.poetry]
name = "pyanalysis-backend"
version = "0.1.0"
description = ""
authors = ["MurVladimirOS <ekliiehxmeh@gmail.com>"]
readme = "README.md"
packages = [{include = "pyanalysis_backend"}]

[tool.poetry.dependencies]
python = "^3.9"
pathlib = "^1.0.1"
pandas = "^1.4.4"
openpyxl = "^3.0.10"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"